# flexmasa

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGES.md  Dockerfile  Makefile  README.md  dune-project  flexmasa-cli.opam  flexmasa.opam  flextesa-cli.opam  flextesa.opam  mavai-mv1-crypto.opam  mavbox-cli.opam  mavbox.opam  mavryk-mv1-crypto.opam  setup-registry.sh  tezai-base58-digest.opam  tezai-tz1-crypto.opam
docker/: Dockerfile
src/: tezos-master.opam-switch
src/app/: dune  main.ml
src/doc/: daemons-upgrade.md  index.mld  mini-net.md
src/lib/: .ocamlformat  command_daemons_protocol_change.ml  console.ml  console.mli  dump_files.ml  dump_files.mli  dune  environment_configuration.ml  experiments.ml  flextesa.opam  hard_fork.ml  hard_fork.mli  helpers.ml  helpers.mli  interactive_mini_network.ml  interactive_test.ml  interactive_test.mli  internal_pervasives.ml  kiln.ml  liquidity.ml  liquidity.mli  log_recorder.ml  mavryk_admin_client.ml  mavryk_admin_client.mli  mavryk_client.ml  mavryk_client.mli  mavryk_daemon.ml  mavryk_daemon.mli  mavryk_executable.ml  mavryk_executable.mli  mavryk_node.ml  mavryk_node.mli  mavryk_protocol.ml  mavryk_protocol.mli  michokit.ml  paths.ml  paths.mli  running_processes.ml  running_processes.mli  smart_contract.ml  (+25 more)
src/lib_base58_digest/: crypto_hash.ml  identifier.ml  identifier.mli
src/lib_michokit/: command.ml  dune  michelson.ml  ocaml_generator.ml  transform_command.ml
src/lib_mv1_crypto/: dune  signer.ml  signer.mli
src/lib_tz1_crypto/: dune  signer.ml
src/scripts/: build-doc.sh  ensure-vendors.sh  full-sandbox-tests.sh  get-mavkit-kernel-build.sh  get-mavkit-static-binaries.sh  get-octez-kernel-build.sh  get-octez-static-binaries.sh  get-tx-client.sh  get-zcash-params.sh  make-docker-images.sh  mini-babylon.sh  opam-test.sh  test-ocaml-code-generation.sh  tutorial-box.sh
src/smart-contracts/: mint_and_deposit_to_rollup.tz
src/smart-rollup-kernels/: evm_kernel.wasm
src/smart-rollup-kernels/tx-kernel/: tx-installer.hex  tx-kernel.wasm
src/test/: dune  main.ml
