(library
 (name flextesa)
 (public_name flextesa)
 (flags
  (:standard -safe-string))
 (preprocess
  (pps ppx_sexp_conv))
 (libraries
  fmt
  cohttp-lwt-unix
  lwt.unix
  cmdliner
  easy-format
  base
  genspio
  ezjsonm
  ptime.clock.os
  tezai-base58-digest
  tezai-tz1-crypto))

(rule
 (target default_contracts.ml)
 (deps
  (:tz %{project_root}/src/smart-contracts/mint_and_deposit_to_rollup.tz))
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let mint_and_deposit_to_rollup = {|")
    (run cat %{tz})
    (echo "|}")))))

(rule
 (target smart_rollup_kernels.ml)
 (deps
  (glob_files ../smart-rollup-kernels/*.wasm))
 (action
  (with-stdout-to
   %{target}
   (progn
    (bash
     "for file in %{deps}; do echo -n 'let '; basename \"${file}\" .wasm | tr -d '\\n'; echo -n ' = {notwasmbyte|'; cat \"$file\"; echo '|notwasmbyte}'; done")))))
