(library
 (name flextesa)
 (public_name flextesa)
 (flags
  (:standard -safe-string))
 (preprocess
  (pps ppx_sexp_conv))
 (libraries
  fmt
  cohttp-lwt-unix
  lwt.unix
  cmdliner
  easy-format
  base
  genspio
  ezjsonm
  ptime.clock.os
  mavai-base58-digest
  mavai-mv1-crypto))

(rule
 (target sandbox_smart_contracts.ml)
 (deps
  (glob_files %{project_root}/src/smart-contracts/*.tz))
 (action
  (with-stdout-to
   %{target}
   (progn
    (bash
     "for file in %{deps}; do echo -n 'let '; basename \"${file}\" .tz | tr -d '\\n'; echo -n ' = {nottz|'; cat \"$file\"; echo '|nottz}'; done")))))

(rule
 (target smart_rollup_kernels.ml)
 (deps
  (glob_files %{project_root}/src/smart-rollup-kernels/*.wasm))
 (action
  (with-stdout-to
   %{target}
   (progn
    (bash
     "for file in %{deps}; do echo -n 'let '; basename \"${file}\" .wasm | tr -d '\\n'; echo -n ' = {notwasmbyte|'; cat \"$file\"; echo '|notwasmbyte}'; done")))))
