opam-version: "2.0"
version: "dev"
maintainer: "seb@mondet.org"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "dune" { >= "2.0.1" }
  "genspio" { = "0.0.2" }
  "dum"
  "lwt"
  "fmt"
  "cohttp-lwt-unix"
  "ezjsonm"
  "tezai-base58-digest"
  "tezai-tz1-crypto"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis:
    "Flexible Tezos Sandboxes: library to run various Tezos network-sandboxes"

